--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -10,10 +10,8 @@ jobs:
   generate-client:
     permissions:
       contents: write
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
-      # For PRs from forks
-      - uses: actions/checkout@v5
       # For PRs from the same repo
       - uses: actions/checkout@v5
         if: ( github.event_name != 'pull_request' || github.secret_source == 'Actions' )
@@ -53,8 +51,3 @@ jobs:
         run: |
           git diff --staged --quiet || git commit -m "✨ Autogenerate admin client"
           git push
-      # Fork PRs
-      - name: Check changes
-        if: ( github.event_name == 'pull_request' && github.secret_source != 'Actions' )
-        run: |
-          git diff --staged --quiet || (echo "Changes detected in generated client, run scripts/generate-client.sh and commit the changes" && exit 1)
