--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test-backend:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v5
